fixed actions right alignment

--- a/src/components/BounceRulesContainer/index.scss
+++ b/src/components/BounceRulesContainer/index.scss
@@ -1,3 +1,8 @@
+th.actions-cell {
+  padding-right: 0;
+  text-align: right;
+}
+
 .csv-button-col {
   text-align: right;
 }
